--- a/servermodulecontrol.html
+++ b/servermodulecontrol.html
@@ -289,7 +289,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             const markdownContent = document.getElementById('markdown-content');
-            const defaultMarkdown = `# Onix Client Server Restriction Documentation
+            const defaultMarkdown = `# Onix Client Server Module Control Documentation
 This is what you can do as a server to restrict features for players who are using Onix Client.
 
 ---
