--- a/smc.html
+++ b/smc.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="theme-color" content="#008FC1">
+    <meta content="Onix Client Server Module Control" property="og:title">
+    <meta content="https://onixclient.com/smc" property="og:url">
+    <meta content="Onix Client Server Module Control (SMC) allows a server to directly control Onix Client modules." property="og:description">
+    <meta content="https://onixclient.com/assets/smalllogo.png" property="og:image">
+    <meta content="#008FC1" data-react-helmet="true" name="theme-color">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-core.min.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/autoloader/prism-autoloader.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-json.min.js"></script>
     <style>
         body {
