--- a/smc.html
+++ b/smc.html
@@ -470,8 +470,13 @@ Use the key that starts with \`module.\`, ends in \`.name\` and **includes** \`.
 
 **Alternative Method:** Use the same strategy as above, but clicking on a setting instead.
 
+## Server Implementations
+### PocketMine-MP
+If you're running a PocketMine-MP server, you can use the [OnixModuleControl-PM](https://github.com/Wraith0x10/OnixModuleControl-PM) plugin to easily implement SMC on your server.
+
 ## Notes
 - This is software-agnostic. You can implement it on any server that supports \`ScriptMessagePacket\`.
+
 `;
 
             processMarkdown(defaultMarkdown);
