--- a/smc.html
+++ b/smc.html
@@ -474,6 +474,9 @@ Use the key that starts with \`module.\`, ends in \`.name\` and **includes** \`.
 ### PocketMine-MP
 If you're running a PocketMine-MP server, you can use the [OnixModuleControl-PM](https://github.com/Wraith0x10/OnixModuleControl-PM) plugin to easily implement SMC on your server.
 
+### Dragonfly
+If you're running a Dragonfly server, you can use the [onix-module-control](https://github.com/didntpot/onix-module-control) library to easily implement SMC on your server.
+
 ## Notes
 - This is software-agnostic. You can implement it on any server that supports \`ScriptMessagePacket\`.
 `;
