--- a/smc.html
+++ b/smc.html
@@ -500,6 +500,9 @@ If you're running a PocketMine-MP server, you can use the [OnixModuleControl-PM]
 ### Dragonfly
 If you're running a Dragonfly server, you can use the [onix-module-control](https://github.com/didntpot/onix-module-control) library to easily implement SMC on your server.
 
+### Nukkit
+If you're running a Nukkit, Nukkit-MOT, NukkitPetteriM1Edition or PowerNukkitX server, you can use the [OnixModuleControl-NK](https://github.com/marioCST/OnixModuleControl-NK) plugin to easily implement SMC on your server.
+
 ## Notes
 - This is software-agnostic. You can implement it on any server that supports \`ScriptMessagePacket\`.
 `;
