--- a/free/download.html
+++ b/free/download.html
@@ -3,7 +3,7 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link rel="icon" type="onixlogo" href="../favicon.ico">
     <title>Onix Client - Free Download</title>
     <meta content="Onix Client Free Download" property="og:title">
